--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>0.1-SNAPSHOT</version>
 
   <properties>
-    <xtend.version>2.4.3</xtend.version>
+    <xtend.version>2.4.2</xtend.version>
     <java.version>1.6</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -22,6 +22,11 @@
       <groupId>com.github.xtension</groupId>
       <artifactId>xtension-contracts</artifactId>
       <version>0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <version>2.0.1</version>
     </dependency>
   </dependencies>
 
